syntax = "proto3";
package prodvana.volumes;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/volumes";

import "validate/validate.proto";

message VolumeSource {
    message SecretSource {
        string secret_name = 1 [(validate.rules).string.min_len = 1];
    }
    message EphemeralSource {
        enum Medium {
            UNKNOWN = 0;
            DEFAULT = 1; // for kubernetes, this the the node's default storage medium
            MEMORY = 2;
        }
        Medium medium = 1;
    }
    oneof source {
        SecretSource secret = 1;
        EphemeralSource ephemeral = 2;
    }
}

message VolumeMount {
    string mount_path = 1;
    bool read_only = 2;
}

message Volume {
    string name = 1 [(validate.rules).string.min_len = 1];
    VolumeSource source = 2;
    VolumeMount mount = 3;
}
